fixed alignment of main content

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,3 +26,12 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+.container {
+   width: 90%;
+   background-color: #f4f1ec;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+ }
